# link-mgmt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  readme.md
archive/: Makefile  README.md  docker-compose.yml
archive/lnk-cli/: Cargo.toml  README.md
archive/lnk-cli/src/: prompts.rs
archive/lnk-cli/src/client/: links.rs
docs/: 001-bun-scraper-design-document.md  002-cli-api-language-comparison.md  003-core-lib-design-document.md  004-embed-typescript-in-go-app.md  005-scraper-integration-design.md  006-link-filtering-design.md  007-architecture-design-review.md  008-scrape-status-implementation-plan.md  009-state-machine-refactoring-plan.md  architecture-design-review.md  cli-api-language-comparison.md  go-api-cli-design-document.md  implementation-plan.md  implementation-status-and-next-steps.md  interactive-save-command.md  link-filtering-design.md  link-mgmt-design-document.md  manage_links_evaluation.md  phase1-implementation-plan.md  scraper-integration-design.md  (+2 more)
link-api/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
link-api/alembic/: env.py
link-api/alembic/versions/: e7bd135ea8ca_add_users_table_and_update_links_to_use_.py
link-api/app/: config.py  database.py  main.py
link-api/app/api/: __init__.py  deps.py
link-api/app/api/v1/: __init__.py  links.py  users.py
link-api/app/background/: tasks.py
link-api/app/models/: __init__.py  link.py
link-api/app/schemas/: __init__.py  link.py
link-api/app/services/: metadata.py
link-api/app/utils/: security.py
(+145 files in other folders)
