[project]
name = "link-api"
version = "0.1.0"
description = "Minimal FastAPI service for link management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "httpx>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ty>=0.0.1a26",
]
