[package]
name = "lnk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "CLI client for link management API"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
anyhow = "1"
thiserror = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
inquire = "0.7"
